# AION

./: .env.template  .flake8  .gitignore  .vscodeignore  AION_FULL_FEATURE_AUDIT.md  AION_PRODUCTION_READY_SUMMARY.md  AION_TESTING_COMPLETE_SUMMARY.md  ANIMATED_INTERFACE_IMPLEMENTATION_SUMMARY.md  ARROW_NAVIGATION_FIX_REPORT.md  CHANGELOG.md  CHATGPT_FEEDBACK_RESOLUTION_REPORT.md  CI_CD_FINAL_FIX.md  CI_CD_PIPELINE_FIXED.md  CI_CD_REQUIREMENTS_FIXED.md  CLEANUP_SUMMARY.md  COMPLETE_INTEGRATION_UPLOAD_SUCCESS.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_CI_CD_SOLUTION.md  FINAL_GITHUB_UPLOAD_REPORT.md  FINAL_IMPLEMENTATION_PROOF.md  FINAL_MAKE_SOLUTION_COMPLETE.md  FINAL_SOLUTION_READY.md  GITHUB_DEPLOYMENT_FIX_REPORT.md  GITHUB_UPLOAD_SUCCESS.md  GITHUB_UPLOAD_SUCCESS_REPORT.md  INSTALLATION.md  INTERFACE_UPDATE_SUMMARY.md  LICENSE  MAKE_PROBLEM_SOLVED.md  MANIFEST.in  Makefile  Microsoft.PowerShell_profile.ps1  PATH_FIX_COMPLETE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  PYPI_DEPLOYMENT_GUIDE.md  PYPI_DEPLOYMENT_SUCCESS_REPORT.md  (+83 more)
.github/workflows/: build-only.yml  ci-simple.yml  ci.yml  deploy.yml  health-check.yml  publish.yml  pypi-publish.yml  quick-test.yml  simple-test.yml  test-matrix.yml
aion/: __init__.py  __main__.py  main.py
aion/ai/: chatbot.py  command_explainer.py  contextual_assistant.py  input_handler.py  smart_search.py
aion/ai_engine/: __init__.py  ai_interface.py  ai_logger.py  chat_engine.py  command_explainer.py  config_loader.py  context_manager.py  provider_router.py
aion/core/: __init__.py  ai_manager.py  ai_providers.py  automation_recipes.py  code_editor.py  executor.py  export_system.py  file_manager.py  plugin_installer.py  plugins.py  sandbox.py  sandbox_system.py  security.py  settings_manager.py  stats_monitor.py  task_manager.py  voice_control.py
aion/features/: __init__.py
aion/integrations/: __init__.py  ai_code_assist.py  email_system.py  github_tools.py  terminal_sharing.py
aion/interfaces/: __init__.py  animated_components.py  arrow_navigation.py  cli.py  enhanced_tui.py  simple_arrow_nav.py  tui.py  web.py
aion/plugins/: plugin_manager.py
aion/security/: otp_manager.py
aion/system/: __init__.py  file_operations.py
aion/utils/: __init__.py  arabic_support.py  helpers.py  translator.py
aion_env/: pyvenv.cfg
aion_env/Scripts/: activate  activate.bat
aion_project/: INSTALLATION_GUIDE.md  INSTALLATION_STATUS.md  MANUAL_INSTALL.md  README.md  check_installations.py  final_system_test.py  fix_path.ps1  fix_security_issues.py  install_checker.py  install_dependencies.ps1  install_requirements.ps1  install_rust.ps1  install_with_winget.ps1  main.py  quick_install.bat  requirements.txt  security_audit.py  simple_install.ps1  test_aion_complete.py  test_arabic_interface.py
aion_project/config/: config.json  lang_ar.json  lang_en.json  security.json
aion_project/src/plugins/: base_plugin.py  calculator_plugin.py  code_execution_plugin.py  plugin_manager.py
aion_project/src/utils/: __init__.py  code_executor.py  input_validator.py  secure_temp.py
archive/: FINAL_ARABIC_REVIEW_COMPLETION.md  FINAL_CHATGPT_RESOLUTION_SUMMARY.md  GITHUB_DEPLOYMENT_FINAL_FIX_REPORT.md
chat_logs/: session_5b8da690_complete.json
config/: advanced_config.py  languages.json  security_config_template.json
core/: executor.py  security.py
crates/aion/: Cargo.toml
crates/aion/locales/: ar.toml  en.toml  no.toml  zh.toml
crates/aion/src/: main.rs
crates/aion/src/config/: io.rs  mod.rs
crates/aion/src/i18n/: mod.rs
crates/aion/src/tui/: mod.rs  wizard.rs
github_package/: CONTRIBUTING.md  MANIFEST.in  __main__.py  build.bat  final_test.py  main.py  quick_test.py  requirements-dev.txt  requirements.txt  start_aion.py
github_package/.github/workflows/: ci.yml
github_package/config/: ai_config_template.json
github_package/core/: __init__.py  ai_providers.py  plugins.py
github_package/interfaces/: __init__.py  tui.py  web.py
github_package/locales/: de.json  en.json  es.json  zh.json
github_package/templates/: index.html
github_package/utils/: helpers.py
interfaces/: cli.py
locales/: ar.json  fr.json  no.json
plugins/: example_plugin.py  test_demo_plugin.py
scripts/: dev-test.sh
test_env/: pyvenv.cfg
test_env/Scripts/: activate  activate.bat
test_logs/: README.md
tests/: README.md  __init__.py  conftest.py  test_ai_prompts.py  test_basic.py  test_core.py  test_imports.py  test_integration.py  test_keyboard_navigation.py  test_language_selection.py  test_plugin_system.py  test_secure_commands.py  test_simple.py  test_smart_search.py
utils/: __init__.py  arabic_support.py  translator.py
