[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aion-ai"
version = "1.0.0"
authors = [
    {name = "AION Development Team", email = "dev@aion-ai.com"},
]
description = "🤖 AION - AI Operating Node: Multilingual Terminal-based AI Assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
]
keywords = ["ai", "assistant", "terminal", "multilingual", "arabic", "cli", "tui", "web", "automation"]
dependencies = [
    "typer>=0.9.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "textual>=0.41.0",
    "openai>=1.3.0",
    "requests>=2.31.0",
    "rich>=13.6.0",
    "pydantic>=2.4.0",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
    "click>=8.1.7",
    "httpx>=0.25.0",
    "aiofiles>=23.2.1",
    "cryptography>=41.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
web = [
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]
full = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
aion = "main:app"
aion-cli = "start_aion_en:main"
aion-ar = "start_aion:main"

[project.urls]
Homepage = "https://github.com/yourusername/aion-ai"
Documentation = "https://github.com/yourusername/aion-ai/wiki"
Repository = "https://github.com/yourusername/aion-ai.git"
"Bug Tracker" = "https://github.com/yourusername/aion-ai/issues"

[tool.setuptools]
packages = ["core", "interfaces", "utils", "locales", "config", "plugins", "templates"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md", "*.yml", "*.yaml", "*.html", "*.css", "*.js"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = [
    "tests",
    ".",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
