[package]
name = "aion"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "AION - AI Operating Node Rust Core"
authors = ["AION"]
repository = "https://github.com/AliPluss/AION"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

dirs = "5.0"

uuid = { version = "1.7", features = ["v4"] }

tokio = { version = "1.37", features = ["full"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

ratatui = "0.26"
crossterm = "0.27"

unicode-width = "0.1"

secrecy = "0.8"
zeroize = "1.7"